--- a/_config.yml
+++ b/_config.yml
@@ -16,11 +16,11 @@ side_bar_repo_limit: 5
 #      Author      #
 # ---------------- #
 author: Chenlu Wang
-organization: zkh360.com
-organization_url: http://www.zkh360.com
-github_username: mzlogin
-location: Wuhan, China
-email: chumpma@gmail.com
+organization: 
+organization_url: 
+github_username: wnarry1996
+location: Arlington, U.S.A
+email: wnarry1996@gmail.com
 
 # ---------------- #
 #    Navigation    #
